NAS-141039: fix: alignment on proactive form

--- a/src/app/pages/system/general-settings/support/proactive/proactive.component.scss
+++ b/src/app/pages/system/general-settings/support/proactive/proactive.component.scss
@@ -17,4 +17,8 @@
       width: 100%;
     }
   }
+
+  tn-form-section {
+    margin-top: 0;
+  }
 }
